--- a/Simplifried/Simplifried.vcxproj
+++ b/Simplifried/Simplifried.vcxproj
@@ -136,6 +136,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="VulkanTestingApp.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="VulkanTestingApp.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
